--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -92,14 +92,12 @@
                 <label for="add-category">Category:</label>
                 <select id="add-category" name="category" required>
                     <option value="">Select category...</option>
-                    <option value="primary">Primary</option>
-                    <option value="secondary">Secondary</option>
-                    <option value="melee">Melee</option>
-                    <option value="warframe">Warframe</option>
                     <option value="mod">Mod</option>
-                    <option value="relic">Relic</option>
-                    <option value="resource">Resource</option>
-                    <option value="other">Other</option>
+                    <option value="wfpart">Warframe Part</option>
+                    <option value="wppart">Weapon Part</option>
+                    <option value="warframe">Warframe Set</option>
+                    <option value="weapon">Weapon Set</option>
+                    <option value="misc">Misc</option>
                 </select>
             </div>
             <div class="form-group">
