add arcane as category

--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -97,6 +97,7 @@
                     <option value="wppart">Weapon Part</option>
                     <option value="warframe">Warframe Set</option>
                     <option value="weapon">Weapon Set</option>
+                    <option value="arcane">Arcane</option>
                     <option value="misc">Misc</option>
                 </select>
             </div>
@@ -147,6 +148,7 @@
                     <option value="wppart">Weapon Part</option>
                     <option value="warframe">Warframe Set</option>
                     <option value="weapon">Weapon Set</option>
+                    <option value="arcane">Arcane</option>
                     <option value="misc">Misc</option>
                 </select>
             </div>
