modify category list

--- a/inventory/templates/inventory/index.html
+++ b/inventory/templates/inventory/index.html
@@ -90,10 +90,8 @@
                 <select id="add-category" name="category" required>
                     <option value="">Select category...</option>
                     <option value="mod">Mod</option>
-                    <option value="wfpart">Warframe Part</option>
-                    <option value="wppart">Weapon Part</option>
-                    <option value="warframe">Warframe Set</option>
-                    <option value="weapon">Weapon Set</option>
+                    <option value="part">Prime Part</option>
+                    <option value="set">Prime Set</option>
                     <option value="arcane">Arcane</option>
                     <option value="misc">Misc</option>
                 </select>
@@ -141,10 +139,8 @@
                 <select id="editCategory" name="category" required>
                     <option value="">Select category...</option>
                     <option value="mod">Mod</option>
-                    <option value="wfpart">Warframe Part</option>
-                    <option value="wppart">Weapon Part</option>
-                    <option value="warframe">Warframe Set</option>
-                    <option value="weapon">Weapon Set</option>
+                    <option value="part">Prime Part</option>
+                    <option value="set">Prime Set</option>
                     <option value="arcane">Arcane</option>
                     <option value="misc">Misc</option>
                 </select>
